# opnreco

./: CHANGES.txt  LICENSE.txt  README.txt  notes.txt  package-lock.json  package.json
backend/: .env.development  .gitignore  Makefile  development.ini  production.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  vars.mk
backend/buildout.d/: base.cfg  versions.cfg
backend/opnreco/: __init__.py  auth.py  autorecostmt.py  cors.py  main.py  mvinterp.py  param.py  reassign.py  reify.py  render.py  serialize.py  siteviews.py  syncbase.py  testing.py  util.py  viewcommon.py
backend/opnreco/api/: apiroot.py  fileapi.py  internalrecoapi.py  periodapi.py  ploopsapi.py  recoapi.py  recoreportapi.py  settingsapi.py  statementapi.py  syncapi.py  transactionsapi.py  transferapi.py  verifyapi.py
backend/opnreco/migration/: 2.sql  v1_1.sql  v1_4.sql  v1_5.sql  v2.0.sql  v2_1.sql
backend/opnreco/models/: db.py  dbmeta.py  perms.py  site.py
backend/opnreco/scripts/: initializedb.py
backend/opnreco/tests/: test_autorecostmt.py  test_mvinterp.py  test_param.py  test_syncbase.py
backend/opnreco/views/: fileview.py  periodview.py  ploopsview.py  recoreportview.py  recoview.py  settingsview.py  syncview.py  transactionsview.py  transferview.py
backend/opnreport/: .coveragerc  auth.py  cors.py  main.py  param.py  render.py  serialize.py  testing.py  util.py  viewcommon.py
backend/opnreport/models/: __init__.py  db.py  dbmeta.py  site.py
backend/opnreport/scripts/: initializedb.py
backend/opnreport/tests/: test_param.py
backend/scripts/: reset.sh
(+173 files in other folders)
