[metadata]
name = opnreco
version = 2.1.1
description = OPN Reconciliation Tool
author = Open Payment Network
author_email = info@openpaymentnetwork.us
url = https://openpaymentnetwork.us

[options]
packages = find:
zip_safe = False
install_requires =
    alembic
    colander
    defusedxml
    Paste
    psycopg2
    pyramid
    pyramid_retry
    pyramid_tm
    python-dateutil
    python-dotenv
    pytz
    requests
    sqlalchemy[postgresql]<2.0
    transaction
    waitress
    watchdog
    xlrd<2.0
    zope.sqlalchemy
classifier =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options.packages.find]
include_package_data = True

[options.extras_require]
dev =
    coverage
    black
    isort
    responses
    pytest
test =
    responses
    pytest

[options.entry_points]
console_scripts =
    initialize_opnreco_db = opnreco.scripts.initializedb:main

paste.app_factory =
    main = opnreco.main:main
